--- a/src/UpnoidV3/appsettings.json
+++ b/src/UpnoidV3/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UpnoidV3-2e938bd8-2f2f-4524-bac9-58a75d567526;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Upnoid;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "IncludeScopes": false,
